--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>referencesetupdraw</title>
+		<title>Kait's Reference Setup And Draw</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>DOTS!!</h1>
+			<h1>Reference Setup Draw</h1>
 		</header>
 			<section id="content">
 				<canvas id="Reference_Setup_Draw" data-processing-sources="Reference_Setup_Draw.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Look at my referance setup and draw !!
 	    </footer>
 	</body>
 </html>
